--- a/app/src/main/res/layout/toolbar_cancel.xml
+++ b/app/src/main/res/layout/toolbar_cancel.xml
@@ -27,6 +27,7 @@
                 app:layout_constraintStart_toStartOf="parent"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
     <TextView
+            android:id="@+id/toolbar_cancel_tv_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="16dp"
