[SSGSAG-217] 상담 글 작성, 수정 - 상단 카테고리 리사이클러뷰 구성
Activity 생성 및 리사이클러뷰 구성

--- a/app/src/main/res/layout/activity_community_board.xml
+++ b/app/src/main/res/layout/activity_community_board.xml
@@ -162,6 +162,7 @@
     </RelativeLayout>
 
     <androidx.cardview.widget.CardView
+            android:id="@+id/act_community_board_cv_write"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:cardCornerRadius="8dp"
