--- a/app/src/main/res/layout/item_board_counsel_post_write_category.xml
+++ b/app/src/main/res/layout/item_board_counsel_post_write_category.xml
@@ -1,18 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout>
+    <data>
+        <variable
+                name="category"
+                type="com.icoo.ssgsag_android.data.model.category.Category" />
+    </data>
+<androidx.constraintlayout.widget.ConstraintLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="32dp"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools">
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_marginBottom="8dp">
     <androidx.cardview.widget.CardView
             android:id="@+id/item_board_counsel_post_write_category_cv"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:cardBackgroundColor="#f2f2f2"
             app:cardCornerRadius="4dp"
-            app:cardElevation="0dp">
+            app:cardElevation="0dp"
+            categoryBg="@{category.checked}">
         <TextView
                 android:id="@+id/item_board_counsel_post_write_category_tv"
                 android:layout_width="wrap_content"
@@ -24,7 +32,10 @@
                 tools:text="일상/연애"
                 android:fontFamily="@font/noto_sans_kr_bold"
                 android:layout_gravity="center"
+                android:text="@{category.categoryName}"
+                categoryText="@{category.checked}"
                 />
     </androidx.cardview.widget.CardView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
