--- a/app/src/main/res/layout/activity_board_counsel_post_write.xml
+++ b/app/src/main/res/layout/activity_board_counsel_post_write.xml
@@ -124,6 +124,7 @@
                 android:scrollbars="vertical"
                 />
         <androidx.cardview.widget.CardView
+                android:id="@+id/act_board_counsel_post_write_cv_upload_photo"
                 android:layout_width="92dp"
                 android:layout_height="90dp"
                 app:cardBackgroundColor="@color/grey_4"
@@ -132,6 +133,8 @@
                 android:layout_marginBottom="32dp"
                 app:cardElevation="0dp">
             <LinearLayout
+                    tools:visibility="gone"
+                    android:id="@+id/act_board_counsel_post_write_ll_upload_photo"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
@@ -150,6 +153,25 @@
                         android:gravity="center_horizontal"
                         android:text="사진 추가" />
             </LinearLayout>
+            <androidx.constraintlayout.widget.ConstraintLayout
+                    android:visibility="gone"
+                    android:id="@+id/act_board_counsel_post_write_cl_photo"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+                <ImageView
+                        android:id="@+id/act_board_counsel_post_write_iv_photo"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"/>
+                <ImageView
+                        android:id="@+id/act_board_counsel_post_write_iv_photo_delete"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/ic_x_chip"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        android:layout_marginTop="4dp"
+                        android:layout_marginRight="4dp"/>
+            </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.cardview.widget.CardView>
 
     </LinearLayout>
@@ -165,7 +187,7 @@
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="16sp"
+                android:textSize="16dp"
                 android:textColor="#ffffff"
                 android:gravity="center_horizontal"
                 android:text="업로드"
