[SSGSAG-215] 작성 기능 구현
n/a

--- a/app/src/main/res/layout/activity_board_counsel_post_write.xml
+++ b/app/src/main/res/layout/activity_board_counsel_post_write.xml
@@ -91,9 +91,10 @@
                     android:layout_height="match_parent"
                     android:textSize="14dp"
                     android:background="@null"
-                    android:textColor="@color/grey_2"
+                    android:textColor="@color/black_1"
                     android:letterSpacing="-0.01"
                     android:hint="상담 제목(최대 20자)"
+                    android:textColorHint="@color/grey_2"
                     android:fontFamily="@font/noto_sans_kr_regular"/>
 
             <View
@@ -183,7 +184,7 @@
             android:layout_height="@dimen/bottom_btn_height"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            android:background="@color/ssgsag">
+            android:background="@color/grey_2">
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
