--- a/app/src/main/res/layout/activity_community_board.xml
+++ b/app/src/main/res/layout/activity_community_board.xml
@@ -155,7 +155,9 @@
                         android:layout_weight="1"
                         app:layout_constraintTop_toBottomOf="@id/act_community_board_iv_top_banner"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintBottom_toBottomOf="parent" />
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        android:paddingBottom="90dp"
+                        android:clipToPadding="false"/>
             </LinearLayout>
 
         </androidx.core.widget.NestedScrollView>
