--- a/app/src/main/res/layout/activity_board_counsel_post_write.xml
+++ b/app/src/main/res/layout/activity_board_counsel_post_write.xml
@@ -13,14 +13,14 @@
         android:background="@color/white">
 
     <include
-            android:id="@+id/act_board_counsel_post_write_toolbar"
+            android:id="@+id/act_board_post_write_toolbar"
             layout="@layout/toolbar_cancel"/>
     <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            app:layout_constraintTop_toBottomOf="@id/act_board_counsel_post_write_toolbar"
+            app:layout_constraintTop_toBottomOf="@id/act_board_post_write_toolbar"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toTopOf="@+id/act_board_counsel_post_write_cl_upload"
+            app:layout_constraintBottom_toTopOf="@+id/act_board_post_write_cl_upload"
             android:fillViewport="true"
             android:overScrollMode="never">
 
@@ -86,7 +86,7 @@
                 android:layout_marginTop="12dp">
 
             <EditText
-                    android:id="@+id/act_board_counsel_post_write_et_title"
+                    android:id="@+id/act_board_post_write_et_title"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:textSize="14dp"
@@ -107,14 +107,14 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <EditText
-                android:id="@+id/act_board_counsel_post_write_et_description"
+                android:id="@+id/act_board_post_write_et_description"
                 android:layout_width="match_parent"
                 android:layout_height="100dp"
                 android:layout_weight="1"
                 android:inputType="textMultiLine|textNoSuggestions"
                 android:layout_marginTop="12dp"
                 android:background="@drawable/border_eeeeee_4"
-                android:hint="@string/board_write_hint"
+                android:hint="@string/board_counsel_write_hint"
                 android:gravity="top"
                 android:paddingVertical="8dp"
                 android:paddingHorizontal="10dp"
@@ -125,7 +125,7 @@
                 android:scrollbars="vertical"
                 />
         <androidx.cardview.widget.CardView
-                android:id="@+id/act_board_counsel_post_write_cv_upload_photo"
+                android:id="@+id/act_board_post_write_cv_upload_photo"
                 android:layout_width="92dp"
                 android:layout_height="90dp"
                 app:cardBackgroundColor="@color/grey_4"
@@ -135,7 +135,7 @@
                 app:cardElevation="0dp">
             <LinearLayout
                     tools:visibility="gone"
-                    android:id="@+id/act_board_counsel_post_write_ll_upload_photo"
+                    android:id="@+id/act_board_post_write_ll_upload_photo"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
@@ -156,15 +156,15 @@
             </LinearLayout>
             <androidx.constraintlayout.widget.ConstraintLayout
                     android:visibility="gone"
-                    android:id="@+id/act_board_counsel_post_write_cl_photo"
+                    android:id="@+id/act_board_post_write_cl_photo"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
                 <ImageView
-                        android:id="@+id/act_board_counsel_post_write_iv_photo"
+                        android:id="@+id/act_board_post_write_iv_photo"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"/>
                 <ImageView
-                        android:id="@+id/act_board_counsel_post_write_iv_photo_delete"
+                        android:id="@+id/act_board_post_write_iv_photo_delete"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:src="@drawable/ic_x_chip"
@@ -179,7 +179,7 @@
     </androidx.core.widget.NestedScrollView>
     
     <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/act_board_counsel_post_write_cl_upload"
+            android:id="@+id/act_board_post_write_cl_upload"
             android:layout_width="match_parent"
             android:layout_height="@dimen/bottom_btn_height"
             app:layout_constraintBottom_toBottomOf="parent"
