[SSGSAG-181] 후기 연결
review pakage를 community 안으로 이동

--- a/app/src/main/res/layout/activity_review_event.xml
+++ b/app/src/main/res/layout/activity_review_event.xml
@@ -3,7 +3,7 @@
     <data>
         <variable
                 name="vm"
-                type="com.icoo.ssgsag_android.ui.main.review.event.ReviewEventViewModel" />
+                type="com.icoo.ssgsag_android.ui.main.community.review.event.ReviewEventViewModel" />
     </data>
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
