--- a/app/src/main/res/layout/fragment_review_main.xml
+++ b/app/src/main/res/layout/fragment_review_main.xml
@@ -4,7 +4,7 @@
     <data>
         <variable
                 name="vm"
-                type="com.icoo.ssgsag_android.ui.main.review.main.ReviewMainViewModel" />
+                type="com.icoo.ssgsag_android.ui.main.community.review.main.ReviewMainViewModel" />
     </data>
     <FrameLayout
             android:id="@+id/frag_review_main_fl_container"
