--- a/app/src/main/res/layout/activity_club_review_detail.xml
+++ b/app/src/main/res/layout/activity_club_review_detail.xml
@@ -3,7 +3,7 @@
     <data>
         <variable
                 name="vm"
-                type="com.icoo.ssgsag_android.ui.main.review.reviewDetail.ReviewDetailViewModel" />
+                type="com.icoo.ssgsag_android.ui.main.community.review.reviewDetail.ReviewDetailViewModel" />
     </data>
 
 <LinearLayout
