[SSGSAG-181] 후기 연결
후기 Activity, Fragment 새로 생성

--- a/app/src/main/res/layout/fragment_review_list_page.xml
+++ b/app/src/main/res/layout/fragment_review_list_page.xml
@@ -5,20 +5,85 @@
         <data>
             <variable
                     name="vm"
-                    type="com.icoo.ssgsag_android.ui.main.review.ReviewViewModel" />
-            <variable
-                    name="reviewListFragment"
-                    type="com.icoo.ssgsag_android.ui.main.review.ReviewListFragment" />
+                    type="com.icoo.ssgsag_android.ui.main.community.review.ReviewViewModel" />
         </data>
-    <RelativeLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="#f2f2f2">
+            android:background="@color/grey_4">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+                android:visibility="gone"
+                android:id="@+id/frag_review_list_page_cl_club_tab"
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                android:background="@color/white"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent">
+            <androidx.cardview.widget.CardView
+                    android:id="@+id/frag_review_list_page_cv_union"
+                    android:layout_width="80dp"
+                    android:layout_height="32dp"
+                    app:cardBackgroundColor="#14656ef0"
+                    app:cardElevation="0dp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toTopOf="@+id/frag_review_list_page_v"
+                    android:layout_marginLeft="24dp"
+                    >
+                <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/noto_sans_kr_medium"
+                        android:textSize="12sp"
+                        android:textColor="@color/cornflower"
+                        android:letterSpacing="-0.02"
+                        android:gravity="center_horizontal"
+                        android:text="연합 동아리"
+                        android:layout_gravity="center"
+                        />
+            </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
+                    android:id="@+id/frag_review_list_page_cv_univ"
+                    android:layout_width="80dp"
+                    android:layout_height="32dp"
+                    app:cardBackgroundColor="#f7f7f7"
+                    app:cardElevation="0dp"
+                    app:layout_constraintStart_toEndOf="@+id/frag_review_list_page_cv_union"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toTopOf="@+id/frag_review_list_page_v"
+                    android:layout_marginLeft="8dp"
+                    >
+                <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/noto_sans_kr_medium"
+                        android:textSize="12sp"
+                        android:textColor="@color/grey_2"
+                        android:letterSpacing="-0.02"
+                        android:gravity="center_horizontal"
+                        android:text="교내 동아리"
+                        android:layout_gravity="center"
+                        />
+            </androidx.cardview.widget.CardView>
+
+            <View
+                    android:id="@+id/frag_review_list_page_v"
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="@color/grey_4"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                clVisibilityByBool="@{vm.isEmpty()}">
+                android:layout_height="0dp"
+                clVisibilityByBool="@{vm.isEmpty()}"
+                app:layout_constraintTop_toBottomOf="@+id/frag_review_list_page_cl_club_tab"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent">
             <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -45,15 +110,17 @@
             </LinearLayout>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
-        <LinearLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
                 android:orientation="vertical"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="0dp"
+                app:layout_constraintTop_toBottomOf="@+id/frag_review_list_page_cl_club_tab"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent">
             <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                     android:id="@+id/frag_review_page_srl"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
-
                 <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/frag_review_page_rv"
                         replaceAll="@{vm.reviewList}"
@@ -65,7 +132,7 @@
                         android:clipToPadding="false"
                         android:background="#f2f2f2"/>
             </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
-        </LinearLayout>
-    </RelativeLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </layout>
