--- a/app/src/main/res/layout/fragment_community.xml
+++ b/app/src/main/res/layout/fragment_community.xml
@@ -173,6 +173,7 @@
         </LinearLayout>
 
         <LinearLayout
+                android:id="@+id/frag_community_ll_review"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
