[SSGSAG-250] 상담/수다 리스트 화면 - item databinding
게시글 등록 날짜 가공 후 binding

--- a/app/src/main/res/layout/item_board.xml
+++ b/app/src/main/res/layout/item_board.xml
@@ -137,7 +137,7 @@
                             android:letterSpacing="-0.02"
                             tools:text="1시간 전"
                             android:layout_marginLeft="8dp"
-                            android:text="@{postDetail.regDate}"/>
+                            regDate="@{postDetail.regDate}"/>
                 </LinearLayout>
             </LinearLayout>
             <androidx.cardview.widget.CardView
