[SSGSAG-258] 3.4.3 hotfix - allPoster에서 viewPager 넘기면 focus가 옮겨지는 문제
scrollview안에 scrollview가 있기 때문, 상위 scrollView에 descendantFocusability 속성의 값을 설정

--- a/app/src/main/res/layout/fragment_all_poster.xml
+++ b/app/src/main/res/layout/fragment_all_poster.xml
@@ -17,7 +17,8 @@
         <androidx.core.widget.NestedScrollView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:overScrollMode="never">
+                android:overScrollMode="never"
+                android:descendantFocusability="blocksDescendants">
         <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
