[SSGSAG-256] 3.4.3 hotfix - allCategoryActivity 비정상 종료 해결
dialogFragment에서 받아온 값으로 통신 부분 변경

--- a/app/src/main/res/layout/activity_all_category.xml
+++ b/app/src/main/res/layout/activity_all_category.xml
@@ -109,8 +109,7 @@
                 android:id="@+id/act_all_category_rv"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                addAll="@{vm.posters}"/>
+                android:orientation="vertical"/>
 
         <RelativeLayout
                 android:visibility="gone"
