--- a/app/src/main/res/layout/activity_board_post_detail.xml
+++ b/app/src/main/res/layout/activity_board_post_detail.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools">
     <data>
         <variable
                 name="vm"
                 type="com.icoo.ssgsag_android.ui.main.community.board.postDetail.BoardPostDetailViewModel" />
     </data>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
         android:background="@color/white">
     <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/act_board_post_detail_cl_toolbar"
@@ -95,7 +95,7 @@
                         android:layout_marginTop="17dp"
                         android:gravity="center_vertical">
                     <androidx.cardview.widget.CardView
-                            cvVisibilityByInt="@{vm.postDetail.isBest}"
+                            cvVisibilityByInt="@{vm.postDetail.community.isBest}"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             app:cardBackgroundColor="#14fe6d6d"
@@ -123,7 +123,7 @@
                             tools:text="공모전/대외활동"
                             android:fontFamily="@font/noto_sans_kr_medium"
                             android:layout_marginLeft="4dp"
-                            android:text="@{vm.postDetail.category}"
+                            boardCategoryText="@{vm.postDetail.community.category}"
                             />
                 </LinearLayout>
 
@@ -136,7 +136,7 @@
                         tools:text="게시판 제목 / 글자 수 20자 제한"
                         android:maxLength="20"
                         android:fontFamily="@font/noto_sans_kr_bold"
-                        android:text="@{vm.postDetail.title}"
+                        android:text="@{vm.postDetail.community.title}"
                         android:layout_marginTop="10dp"/>
                 <LinearLayout
                         android:layout_width="wrap_content"
@@ -148,7 +148,7 @@
                             android:layout_width="24dp"
                             android:layout_height="24dp"
                             android:src="@drawable/profile"
-                            profileImg="@{vm.postDetail.photoUrlList}"/>
+                            profileImg="@{vm.postDetail.community.photoUrlList}"/>
                     <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
@@ -175,7 +175,7 @@
                             android:letterSpacing="-0.02"
                             android:fontFamily="@font/noto_sans_kr_regular"
                             tools:text="3일 전"
-                            android:text="@{vm.postDetail.regDate}"/>
+                            android:text="@{vm.postDetail.community.regDate}"/>
                 </LinearLayout>
                 <TextView
                         android:layout_width="wrap_content"
@@ -187,7 +187,7 @@
                         android:layout_marginTop="16dp"
                         android:layout_marginBottom="16dp"
                         tools:text="글 내용"
-                        android:text="@{vm.postDetail.content}"
+                        android:text="@{vm.postDetail.community.content}"
                         />
             </LinearLayout>
 
@@ -198,57 +198,63 @@
                     android:adjustViewBounds="true"
                     app:layout_constraintTop_toBottomOf="@id/act_board_post_detail_ll_post_container"
                     app:layout_constraintStart_toStartOf="parent"
-                    glideImg="@{vm.postDetail.photoUrlList}"/>
-            <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:layout_marginTop="16dp"
-                    android:layout_marginBottom="16dp"
-                    android:layout_marginHorizontal="24dp"
-                    android:gravity="center_vertical">
-
-                <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textSize="12dp"
-                        android:textColor="@color/grey_2"
-                        android:letterSpacing="-0.02"
-                        android:fontFamily="@font/noto_sans_kr_regular"
-                        postDetailCommentNum="@{vm.postDetail.commentNum}" />
-                <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textSize="12dp"
-                        android:textColor="@color/grey_2"
-                        android:letterSpacing="-0.02"
-                        android:fontFamily="@font/noto_sans_kr_regular"
-                        android:layout_marginHorizontal="8dp"
-                        android:layout_weight="1"
-                        postDetailViewNum="@{vm.postDetail.showNum}"/>
+                    ivVisibilityByString="@{vm.postDetail.community.photoUrlList}"
+                    glideImg="@{vm.postDetail.community.photoUrlList}"/>
 
                 <LinearLayout
-                        android:layout_width="104dp"
-                        android:layout_height="36dp"
-                        android:orientation="horizontal"
-                        android:gravity="center"
-                        android:background="@drawable/border_eeeeee_4">
-                    <ImageView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:src="@drawable/ic_like_outlined"/>
+                        android:layout_width="366dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="24dp"
+                        android:layout_marginTop="16dp"
+                        android:layout_marginRight="20dp"
+                        android:layout_marginBottom="16dp"
+                        android:gravity="center_vertical"
+                        android:orientation="horizontal">
+
                     <TextView
+                            postDetailLikeNum="@{vm.postDetail.community.likeNum}"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:textSize="12dp"
-                            android:textColor="@color/black_2"
-                            android:letterSpacing="-0.02"
+                            android:layout_marginRight="8dp"
+                            android:fontFamily="@font/noto_sans_kr_regular"
                             android:gravity="center_horizontal"
-                            android:fontFamily="@font/noto_sans_kr_bold"
-                            android:layout_marginLeft="4dp"
-                            postDetailLikeNum="@{vm.postDetail.likeNum}"/>
+                            android:letterSpacing="-0.02"
+                            android:textColor="@color/grey_2"
+                            android:textSize="12dp" />
+
+                    <TextView
+                            postDetailCommentNum="@{vm.postDetail.community.commentNum}"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginRight="8dp"
+                            android:fontFamily="@font/noto_sans_kr_regular"
+                            android:letterSpacing="-0.02"
+                            android:textColor="@color/grey_2"
+                            android:textSize="12dp" />
+
+                    <TextView
+                            postDetailViewNum="@{vm.postDetail.community.showNum}"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:fontFamily="@font/noto_sans_kr_regular"
+                            android:letterSpacing="-0.02"
+                            android:textColor="@color/grey_2"
+                            android:textSize="12dp" />
+
+                    <ImageView
+                            android:id="@+id/act_board_post_detail_iv_bookmark"
+                            postBookmark="@{vm.postDetail.save}"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginRight="4dp" />
+
+                    <ImageView
+                            android:id="@+id/act_board_post_detail_iv_like"
+                            postLike="@{vm.postDetail.like}"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content" />
                 </LinearLayout>
-            </LinearLayout>
             </LinearLayout>
             <View
                     android:layout_width="match_parent"
